--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <sourceJdk>1.8</sourceJdk>
         <targetJdk>1.8</targetJdk>
         <github.account>wakaleo</github.account>
-        <thucydides.version>1.8.3</thucydides.version>
+        <thucydides.version>1.8.2</thucydides.version>
         <jelastic.context>gameoflife</jelastic.context>
         <jelastic.environment>wakaleo</jelastic.environment>
     </properties>
@@ -212,13 +212,13 @@
         <module>gameoflife-web</module>
     </modules>
     <profiles>
-        <profile>
+        <!--profile>
             <id>development</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
 
-        </profile>
+        </profile-->
         <profile>
             <id>metrics</id>
             <build>
@@ -313,7 +313,7 @@
                                 <plugin>
                                     <groupId>org.apache.maven.plugins</groupId>
                                     <artifactId>maven-checkstyle-plugin</artifactId>
-                                    <version>3.0.1</version>
+                                    <version>2.17</version>
                                     <!--<configuration>-->
                                     <!--<configLocation>gol-checkstyle.xml</configLocation>-->
                                     <!--</configuration>-->
@@ -323,7 +323,7 @@
                                     <artifactId>maven-pmd-plugin</artifactId>
                                     <version>3.2</version>
                                     <configuration>
-                                        <targetJdk>1.6</targetJdk>
+                                        <targetJdk>1.8</targetJdk>
                                         <aggregate>true</aggregate>
                                         <format>xml</format>
                                         <rulesets>
@@ -452,7 +452,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-checkstyle-plugin</artifactId>
-                        <version>2.9.1</version>
+                        <version>2.17</version>
                         <configuration>
                             <configLocation>gameoflife-build/checkstyle.xml</configLocation>
                         </configuration>
